finding html element by Id

--- a/dom1.html
+++ b/dom1.html
@@ -9,6 +9,16 @@
     <h1>My first DOM lesson</h1>
     <p id="ptag"></p>
 
+    <!-- finding HTML elements by Id -->
+
+    <h1>My second DOM lesson</h1>
+    <p id="ptag2">Generative AI</p>
+
+    <p id="demo"></p>
+
+    
+
+
 
     <script src="dom1.js"></script>
 </body>
