--- a/dom1.html
+++ b/dom1.html
@@ -16,6 +16,13 @@
 
     <p id="demo"></p>
 
+    <!--  finding HTML elements by tag name-->
+
+    <h1>My Third DOM lesson</h1>
+    <p id="ptag3">first Text</p>
+    <p id="ptag4">second text</p>
+
+    <p id="demo1"></p>
     
 
 
