Password Form Validation: DOM

--- a/dom1.html
+++ b/dom1.html
@@ -23,6 +23,14 @@
     <p id="ptag4">second text</p>
 
     <p id="demo1"></p>
+
+    <!-- Password in Form -->
+    <h2>Form Validation Example</h2>
+    <form onsubmit="return validateForm()">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"><br><br>
+        <input type="submit" value="Submit">
+    </form>
     
 
 
